--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="countdown-container" style="width: 70%;">
         <fieldset>  
-            <legend align="center"><h1 style="font-size: 1rem;">My Birthday : 15 11</h1></legend>   
+            <legend align="center"><h1 style="font-size: 1rem;">My Birthday : 15 November</h1></legend>   
             <div id="countdown"></div>
             <p>Year: <span id="year" >2023 </span></p>
             <button id="refresh-button">Refresh</button>
